Trans view - Fixed overflow and changed missleading name

--- a/src/components/blockexplorer/style.less
+++ b/src/components/blockexplorer/style.less
@@ -23,3 +23,7 @@
         padding: 16px 10px 80px 50px;
     }
 }
+.transactionlogPanel {
+    height: 100%;
+    overflow-y: auto;
+}
